# parp-25l

./: README.md
haskell/: .gitignore  Main.hs  README.md  Tree.hs  haskell.cabal  temp.hs
haskell/src/: Actions.hs  Dialogues.hs  Help.hs  Item.hs  ItemInteractions.hs  ItemsActions.hs  Main.hs  Object.hs  Place.hs  Places.hs  State.hs  Utils.hs  WaitInteractions.hs  roadmap.md
prolog/: README.md  adventure.pl  dialogues.pl  help.pl  interactions.pl  place_descriptions.pl  player_actions.pl  world_facts.pl  zapis_rozgrywki.txt
smalltalk/: Makefile  README.md  dialogue.st  game.st  location.st  place.st  state.st  text.st  zapis_rozgrywki.txt
