cabal-version:      3.4
name:               adventure
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             sawertynn
maintainer:         sawertynn@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable adventure
    main-is:          Main.hs
    -- other-extensions:
    other-modules:    Help, Actions, Dialogues, Interactions, Places
    build-depends:    base ^>=4.17.2.1,
                      random ^>=1.2
    hs-source-dirs:   src
    default-language: Haskell2010
