cabal-version:      3.4
name:               adventure
version:            0.1.0.0
license:            NONE
category:           Game
build-type:         Simple

executable adventure
    main-is:          Main.hs
    -- other-extensions:
    other-modules:    Help, Actions, Dialogues, Interactions, Places, Utils
    build-depends:    base ^>=4.17.2.1,
                      random ^>=1.2
    hs-source-dirs:   src
    default-language: Haskell2010
